yahia-home work

--- a/01-HTML-CSS/09-animations/Andrew, Ohad, Yahia/style.scss
+++ b/01-HTML-CSS/09-animations/Andrew, Ohad, Yahia/style.scss
@@ -443,10 +443,47 @@ p{
     }
 }
 .wrapper2{
-    margin-left: -100px;
-    margin-top: 0px;
+    margin-left: 5px;
+    margin-top: 300px;
     display: flex;
+    position: absolute;
     flex-wrap: row;
+    justify-content: center;
+    text-align: center;
+}
+.your-Exchange{
+    position: absolute;
+    
+    height: 20px;
+    background-color: var(--color-light-grey);
+   
+    
+    &__result{
+        height: 100px;
+        justify-content: center;
+        border-radius: 15px;
+        width: 400px;
+        background-color: var(--color-light-grey);
+         display: flex;
+         flex-wrap: row;
+        margin-top: 300px;
+        .text{
+            color: var(--color-light-green);
+            justify-content: center;
+            text-align: center;
+            font-size: 28px;
+
+
+        }
+        .theresult{
+           
+            input{
+                font-size:large;
+            }
+
+        }
+
+    }
 }
     
 /*yahya END*/
