--- a/01-HTML-CSS/09-animations/Plant App Leo Shani Alex/style.scss
+++ b/01-HTML-CSS/09-animations/Plant App Leo Shani Alex/style.scss
@@ -473,30 +473,31 @@ section{
     .maintree{
         position:absolute;
         background-color:green;
-        width:1%;
-        height:15%;
+        width:0.5rem;
+        height:10%;
         bottom:-80%;
-        left:50%;
+        left:80%;
         animation-name: treeGrows;
         animation-duration: 4s;
         animation-timing-function:linear;
         transform-origin:bottom;
         animation-fill-mode:both;
+        animation-delay: 1s;  
        
         
 
     }
 
     @keyframes treeGrows{
-        0%{ transform: scale(1)};
-        15%{transform: scale(1)};
-        25%{transform: scale(1.5)};
+        0%{ transform: scale(0)};
+        15%{transform: scale(0.5)};
+        25%{transform: scale(1)};
         40%{transform: scale(1.5)};
         50%{transform: scale(1.5)};
         65%{transform: scale(2)};
         75%{transform: scale(2)};
-        90%{transform: scale(2.5)};
-        100%{transform: scale(2.5)};       
+        90%{transform: scale(2)};
+        100%{transform: scale(2)};       
 
     }
 
@@ -555,16 +556,17 @@ section{
     
     .flowerCircle{
         background-color:yellow;
-        width:250%;
-        height:40%;
+        width:300%;
+        height:45%;
         border-radius:50%;
         position:absolute;
-        border: 1px orange solid; 
+        border: 3px orange solid; 
         bottom:95%;
-        right:-75%;
+        right:-110%;
         animation-name:flowerCircle;
         animation-duration:5s;
         animation-fill-mode:forwards;
+        font-weight:bold;
 
         p{
             position:absolute;
@@ -579,7 +581,9 @@ section{
         &:hover{
             cursor:pointer;
             background-color:rgb(255, 255, 121);
-            font-weight:bold;
+            p{
+                color:rgb(255, 115, 0);
+            }
             
             
         }
@@ -611,18 +615,72 @@ section{
     .tree2{
         position:absolute;
         background-color:green;
-        width:1%;
-        height:5%;
+        width:0.5rem;
+        height:10%;
         bottom:-80%;
         left:20%;
-        animation-name: treeGrows;
+        animation-name: tree2Grows;
         animation-duration: 4s;
         animation-timing-function:linear;
         transform-origin:bottom;
-        animation-fill-mode:both;
-       
+        animation-fill-mode:both;   
+          
 
     }
+    @keyframes tree2Grows{
+        0%{ transform: scale(0)};
+        15%{transform: scale(0.5)};
+        25%{transform: scale(1)};
+        40%{transform: scale(1.5)};
+        50%{transform: scale(1.5)};
+        65%{transform: scale(2)};
+        75%{transform: scale(2)};
+        90%{transform: scale(2)};
+        100%{transform: scale(2)};       
+
+    }
+    
+    .flowerCircle2{
+        background-color:rgb(255, 145, 0);
+        width:500%;
+        height:35%;
+        border-radius:60%;
+        position:absolute;
+        border: 4px yellow solid; 
+        bottom:95%;
+        right:-205%;
+        animation-name:flowerCircle;
+        animation-duration:5s;
+        animation-fill-mode:forwards;
+        font-weight:bold;
+        
+
+        p{
+            position:absolute;
+            left:5%;
+            top:20%;
+            font-size:1%;
+            text-align:center;
+            color:rgba(0, 0, 0, 0.774);
+        
+        }
+        
+        &:hover{
+            cursor:pointer;
+            background-color:rgb(230, 172, 48);
+            p{
+                color:rgb(255, 255, 21);
+            }
+            
+            
+        }
+
+           
+
+    }
+
+    
+
 }
 
 
@@ -635,30 +693,17 @@ section{
 
         &__title {
             text-align: center;
-
-
             font-size: calc(1rem + 0.5rem);
-            /* grid-row:1/span 1;
-             position:absolute;
-             left:43%;*/
-
+           
         }
 
         &__box {
             font-size: calc(70% + 0.5rem);
             position:relative;
             left: 32%;
-            width: 40%;
-           
+            width: 40%;           
             gap: 20px;
-            /* grid-row:2/span 3;
-            width:30vw; */
-
-            /*img {
-                width:14vw;                
-                padding-left:8%;
-
-            }*/
+           
 
         }
     }
@@ -690,9 +735,6 @@ section{
        left:35%; 
 
     
-        /*h3{
-           padding-top:20%;
-       }*/
     }
 
     .checkout {
@@ -710,6 +752,53 @@ section{
         font-size: calc(60% + 0.5rem);
 
     }
+
+    .cartgarden{
+
+
+        .maintree{            
+            left:70%;          
+            
+    
+        }
+       
+        
+        @keyframes treeGrows{
+            0%{ transform: scale(0)};
+            15%{transform: scale(1)};
+            25%{transform: scale(1.5)};
+            40%{transform: scale(2)};
+            50%{transform: scale(2.5)};
+            65%{transform: scale(2.5)};
+            75%{transform: scale(3)};
+            90%{transform: scale(3.5)};
+            100%{transform: scale(4)};       
+    
+        }
+
+        .tree2{           
+            left:30%;          
+            
+        }
+        
+
+        @keyframes tree2Grows{
+            0%{ transform: scale(0)};
+            15%{transform: scale(0.5)};
+            25%{transform: scale(1)};
+            40%{transform: scale(1.5)};
+            50%{transform: scale(2)};
+            65%{transform: scale(2)};
+            75%{transform: scale(2.5)};
+            90%{transform: scale(3)};
+            100%{transform: scale(3)};       
+    
+        }
+    }
+
+    
+    
+    
 
 
 }
