--- a/01-HTML-CSS/09-animations/Plant App Leo Shani Alex/style.scss
+++ b/01-HTML-CSS/09-animations/Plant App Leo Shani Alex/style.scss
@@ -569,6 +569,7 @@ body {
 
             &.__02 {
                 background-color: rgb(91, 192, 192);
+                color: rgb(254, 244, 45);
 
             }
 
@@ -578,7 +579,7 @@ body {
 
 
 
-  
+
 /*Cart page- Shani*/
 
 .cartPage {
@@ -666,8 +667,8 @@ body {
 }
 
 .rightside {
-    
-   
+
+
     i {
         position: absolute;
         left: 18rem;
@@ -696,7 +697,7 @@ body {
 .checkout {
     background-color: rgb(255, 255, 255);
     height: 50vh;
-    
+
     padding: 2rem;
     font-family: sans-serif;
     color: rgba(0, 0, 0, 0.774);
@@ -771,223 +772,377 @@ body {
             cursor: pointer;
 
         }
-       
+
     }
 
 
 }
 
-.cartgarden{
-    .maintree{
-        position:absolute;
-        background-color:green;
-        width:0.5rem;
-        height:10%;
-        bottom:-80%;
-        left:80%;
+.cartgarden {
+    .maintree {
+        position: absolute;
+        background-color: green;
+        width: 0.5rem;
+        height: 10%;
+        bottom: -80%;
+        left: 80%;
         animation-name: treeGrows;
         animation-duration: 4s;
-        animation-timing-function:linear;
-        transform-origin:bottom;
-        animation-fill-mode:both;
-        animation-delay: 1s;  
-       
-        
+        animation-timing-function: linear;
+        transform-origin: bottom;
+        animation-fill-mode: both;
+        animation-delay: 1s;
+
+
 
     }
 
-    @keyframes treeGrows{
-        0%{ transform: scale(0)};
-        15%{transform: scale(0.5)};
-        25%{transform: scale(1)};
-        40%{transform: scale(1.5)};
-        50%{transform: scale(1.5)};
-        65%{transform: scale(2)};
-        75%{transform: scale(2)};
-        90%{transform: scale(2)};
-        100%{transform: scale(2)};       
+    @keyframes treeGrows {
+        0% {
+            transform: scale(0)
+        }
+
+        ;
+
+        15% {
+            transform: scale(0.5)
+        }
+
+        ;
+
+        25% {
+            transform: scale(1)
+        }
+
+        ;
+
+        40% {
+            transform: scale(1.5)
+        }
+
+        ;
+
+        50% {
+            transform: scale(1.5)
+        }
+
+        ;
+
+        65% {
+            transform: scale(2)
+        }
+
+        ;
+
+        75% {
+            transform: scale(2)
+        }
+
+        ;
+
+        90% {
+            transform: scale(2)
+        }
+
+        ;
+
+        100% {
+            transform: scale(2)
+        }
+
+        ;
 
     }
 
-    .tree__leaf{
-        position:absolute;
-        width:40%;
-        height:40%;
+    .tree__leaf {
+        position: absolute;
+        width: 40%;
+        height: 40%;
         background-color: green;
-        border:0;
+        border: 0;
         border-top-right-radius: 100%;
-        border-bottom-left-radius:100%;
-       
-    }
-
-    .tree__leaf--left{
-        bottom:80%;
-        left:-97%;
-        width:100%;
-        height:10%;
-        animation-name:leftLeaf; 
-        animation-duration: 3s;      
-        animation-fill-mode:forwards;
-        animation-timing-function:ease-in;
+        border-bottom-left-radius: 100%;
 
     }
 
-    @keyframes leftLeaf{
-        0%{ transform: scale(0)};
-        20%{transform: scale(0.5)};              
-        100%{transform: scale(1)};  
-
-    }
-    
-
-    .tree__leaf--right{
-        bottom:60%;
-        right:-91%;
-        width:100%;
-        height:6%;
-        transform: rotate(90deg);        
-        animation-name:rightLeaf; 
-        animation-duration: 8s;      
-        animation-fill-mode:forwards;
-        animation-timing-function:ease-in;
+    .tree__leaf--left {
+        bottom: 80%;
+        left: -97%;
+        width: 100%;
+        height: 10%;
+        animation-name: leftLeaf;
+        animation-duration: 3s;
+        animation-fill-mode: forwards;
+        animation-timing-function: ease-in;
 
     }
 
-    @keyframes rightLeaf{
-        0%{ transform: scale(0)};
-        20%{transform: scale(1)};
-        40%{transform: scale(2)};
-        65%{transform: scale(2)};        
-        100%{transform: scale(2.5)};  
-
-    }  
-    
-    .flowerCircle{
-        background-color:yellow;
-        width:300%;
-        height:45%;
-        border-radius:50%;
-        position:absolute;
-        border: 3px orange solid; 
-        bottom:95%;
-        right:-110%;
-        animation-name:flowerCircle;
-        animation-duration:5s;
-        animation-fill-mode:forwards;
-        font-weight:bold;
-
-        p{
-            position:absolute;
-            left:5%;
-            top:20%;
-            font-size:1%;
-            text-align:center;
-            color:rgba(0, 0, 0, 0.774);
-        
+    @keyframes leftLeaf {
+        0% {
+            transform: scale(0)
         }
-        
-        &:hover{
-            cursor:pointer;
-            background-color:rgb(255, 255, 121);
-            p{
-                color:rgb(255, 115, 0);
+
+        ;
+
+        20% {
+            transform: scale(0.5)
+        }
+
+        ;
+
+        100% {
+            transform: scale(1)
+        }
+
+        ;
+
+    }
+
+
+    .tree__leaf--right {
+        bottom: 60%;
+        right: -91%;
+        width: 100%;
+        height: 6%;
+        transform: rotate(90deg);
+        animation-name: rightLeaf;
+        animation-duration: 8s;
+        animation-fill-mode: forwards;
+        animation-timing-function: ease-in;
+
+    }
+
+    @keyframes rightLeaf {
+        0% {
+            transform: scale(0)
+        }
+
+        ;
+
+        20% {
+            transform: scale(1)
+        }
+
+        ;
+
+        40% {
+            transform: scale(2)
+        }
+
+        ;
+
+        65% {
+            transform: scale(2)
+        }
+
+        ;
+
+        100% {
+            transform: scale(2.5)
+        }
+
+        ;
+
+    }
+
+    .flowerCircle {
+        background-color: yellow;
+        width: 300%;
+        height: 45%;
+        border-radius: 50%;
+        position: absolute;
+        border: 3px orange solid;
+        bottom: 95%;
+        right: -110%;
+        animation-name: flowerCircle;
+        animation-duration: 5s;
+        animation-fill-mode: forwards;
+        font-weight: bold;
+
+        p {
+            position: absolute;
+            left: 5%;
+            top: 20%;
+            font-size: 1%;
+            text-align: center;
+            color: rgba(0, 0, 0, 0.774);
+
+        }
+
+        &:hover {
+            cursor: pointer;
+            background-color: rgb(255, 255, 121);
+
+            p {
+                color: rgb(255, 115, 0);
             }
-            
-            
+
+
         }
 
-           
 
-    }
-     @keyframes flowerCircle{
-        0%{ transform: scale(0)};
-        20%{transform: scale(0)};
-        40%{transform: scale(1)};
-        65%{transform: scale(1)};        
-        100%{transform: scale(1)};  
 
     }
 
+    @keyframes flowerCircle {
+        0% {
+            transform: scale(0)
+        }
 
+        ;
 
+        20% {
+            transform: scale(0)
+        }
 
-    img{
-        
-        position:absolute;
-        bottom:-90%;
-        width:100%;
-        height:25%;
+        ;
+
+        40% {
+            transform: scale(1)
+        }
+
+        ;
+
+        65% {
+            transform: scale(1)
+        }
+
+        ;
+
+        100% {
+            transform: scale(1)
+        }
+
+        ;
+
     }
 
 
-    .tree2{
-        position:absolute;
-        background-color:green;
-        width:0.5rem;
-        height:10%;
-        bottom:-80%;
-        left:20%;
+
+
+    img {
+
+        position: absolute;
+        bottom: -90%;
+        width: 100%;
+        height: 25%;
+    }
+
+
+    .tree2 {
+        position: absolute;
+        background-color: green;
+        width: 0.5rem;
+        height: 10%;
+        bottom: -80%;
+        left: 20%;
         animation-name: tree2Grows;
         animation-duration: 4s;
-        animation-timing-function:linear;
-        transform-origin:bottom;
-        animation-fill-mode:both;   
-          
+        animation-timing-function: linear;
+        transform-origin: bottom;
+        animation-fill-mode: both;
+
 
     }
-    @keyframes tree2Grows{
-        0%{ transform: scale(0)};
-        15%{transform: scale(0.5)};
-        25%{transform: scale(1)};
-        40%{transform: scale(1.5)};
-        50%{transform: scale(1.5)};
-        65%{transform: scale(2)};
-        75%{transform: scale(2)};
-        90%{transform: scale(2)};
-        100%{transform: scale(2)};       
 
-    }
-    
-    .flowerCircle2{
-        background-color:rgb(255, 145, 0);
-        width:500%;
-        height:35%;
-        border-radius:60%;
-        position:absolute;
-        border: 4px yellow solid; 
-        bottom:95%;
-        right:-205%;
-        animation-name:flowerCircle;
-        animation-duration:5s;
-        animation-fill-mode:forwards;
-        font-weight:bold;
-        
-
-        p{
-            position:absolute;
-            left:5%;
-            top:20%;
-            font-size:1%;
-            text-align:center;
-            color:rgba(0, 0, 0, 0.774);
-        
+    @keyframes tree2Grows {
+        0% {
+            transform: scale(0)
         }
-        
-        &:hover{
-            cursor:pointer;
-            background-color:rgb(230, 172, 48);
-            p{
-                color:rgb(255, 255, 21);
+
+        ;
+
+        15% {
+            transform: scale(0.5)
+        }
+
+        ;
+
+        25% {
+            transform: scale(1)
+        }
+
+        ;
+
+        40% {
+            transform: scale(1.5)
+        }
+
+        ;
+
+        50% {
+            transform: scale(1.5)
+        }
+
+        ;
+
+        65% {
+            transform: scale(2)
+        }
+
+        ;
+
+        75% {
+            transform: scale(2)
+        }
+
+        ;
+
+        90% {
+            transform: scale(2)
+        }
+
+        ;
+
+        100% {
+            transform: scale(2)
+        }
+
+        ;
+
+    }
+
+    .flowerCircle2 {
+        background-color: rgb(255, 145, 0);
+        width: 500%;
+        height: 35%;
+        border-radius: 60%;
+        position: absolute;
+        border: 4px yellow solid;
+        bottom: 95%;
+        right: -205%;
+        animation-name: flowerCircle;
+        animation-duration: 5s;
+        animation-fill-mode: forwards;
+        font-weight: bold;
+
+
+        p {
+            position: absolute;
+            left: 5%;
+            top: 20%;
+            font-size: 1%;
+            text-align: center;
+            color: rgba(0, 0, 0, 0.774);
+
+        }
+
+        &:hover {
+            cursor: pointer;
+            background-color: rgb(230, 172, 48);
+
+            p {
+                color: rgb(255, 255, 21);
             }
-            
-            
+
+
         }
 
-           
+
 
     }
 
-    
+
 
 }
 
@@ -995,41 +1150,42 @@ body {
 @media screen and (min-width: 700px) {
 
     .myCart__grid {
-        grid-template-rows: repeat(4, 20%); 
-        
+        grid-template-rows: repeat(4, 20%);
+
 
 
         &__title {
             text-align: center;
             font-size: calc(1rem + 0.5rem);
-           
+
         }
 
         &__box {
             font-size: calc(70% + 0.5rem);
-            position:relative;
+            position: relative;
             left: 32%;
-            width: 40%;           
+            width: 40%;
             gap: 20px;
-           
+
 
         }
     }
 
     .leftside {
-       
-        text-align:center;
 
-        h3{
-            padding-left:10%;
+        text-align: center;
+
+        h3 {
+            padding-left: 10%;
         }
-        p{
-            padding-left:10%;
+
+        p {
+            padding-left: 10%;
         }
-        
-       
-        input{            
-            margin-left:80%;
+
+
+        input {
+            margin-left: 80%;
             width: 4rem;
             height: 2rem;
 
@@ -1039,10 +1195,10 @@ body {
 
     .rightside {
 
-       position:relative;
-       left:35%; 
+        position: relative;
+        left: 35%;
 
-    
+
     }
 
     .checkout {
@@ -1061,53 +1217,140 @@ body {
 
     }
 
-    .cartgarden{
+    .cartgarden {
 
 
-        .maintree{            
-            left:70%;          
-            
-    
-        }
-       
-        
-        @keyframes treeGrows{
-            0%{ transform: scale(0)};
-            15%{transform: scale(1)};
-            25%{transform: scale(1.5)};
-            40%{transform: scale(2)};
-            50%{transform: scale(2.5)};
-            65%{transform: scale(2.5)};
-            75%{transform: scale(3)};
-            90%{transform: scale(3.5)};
-            100%{transform: scale(4)};       
-    
+        .maintree {
+            left: 70%;
+
+
         }
 
-        .tree2{           
-            left:30%;          
-            
-        }
-        
 
-        @keyframes tree2Grows{
-            0%{ transform: scale(0)};
-            15%{transform: scale(0.5)};
-            25%{transform: scale(1)};
-            40%{transform: scale(1.5)};
-            50%{transform: scale(2)};
-            65%{transform: scale(2)};
-            75%{transform: scale(2.5)};
-            90%{transform: scale(3)};
-            100%{transform: scale(3)};       
-    
+        @keyframes treeGrows {
+            0% {
+                transform: scale(0)
+            }
+
+            ;
+
+            15% {
+                transform: scale(1)
+            }
+
+            ;
+
+            25% {
+                transform: scale(1.5)
+            }
+
+            ;
+
+            40% {
+                transform: scale(2)
+            }
+
+            ;
+
+            50% {
+                transform: scale(2.5)
+            }
+
+            ;
+
+            65% {
+                transform: scale(2.5)
+            }
+
+            ;
+
+            75% {
+                transform: scale(3)
+            }
+
+            ;
+
+            90% {
+                transform: scale(3.5)
+            }
+
+            ;
+
+            100% {
+                transform: scale(4)
+            }
+
+            ;
+
+        }
+
+        .tree2 {
+            left: 30%;
+
+        }
+
+
+        @keyframes tree2Grows {
+            0% {
+                transform: scale(0)
+            }
+
+            ;
+
+            15% {
+                transform: scale(0.5)
+            }
+
+            ;
+
+            25% {
+                transform: scale(1)
+            }
+
+            ;
+
+            40% {
+                transform: scale(1.5)
+            }
+
+            ;
+
+            50% {
+                transform: scale(2)
+            }
+
+            ;
+
+            65% {
+                transform: scale(2)
+            }
+
+            ;
+
+            75% {
+                transform: scale(2.5)
+            }
+
+            ;
+
+            90% {
+                transform: scale(3)
+            }
+
+            ;
+
+            100% {
+                transform: scale(3)
+            }
+
+            ;
+
         }
     }
 
-    
-    
-    
+
+
+
 
 
 }
-
