--- a/01-HTML-CSS/09-animations/Plant App Leo Shani Alex/style.scss
+++ b/01-HTML-CSS/09-animations/Plant App Leo Shani Alex/style.scss
@@ -2,6 +2,7 @@
 body {
     margin: 0;
     padding: 0;
+    font-family: 'Courier New', Courier, monospace
 }
 
 
@@ -336,6 +337,7 @@ body {
 
         p {
             font-size: calc(1rem + 0.5rem);
+
         }
     }
 
