--- a/01-HTML-CSS/09-animations/Plant App Leo Shani Alex/style.scss
+++ b/01-HTML-CSS/09-animations/Plant App Leo Shani Alex/style.scss
@@ -30,7 +30,7 @@ body {
         position: relative;
         top: 6vh;
         text-align: center;
-        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+        
         font-size: 25px;
     }
 }
@@ -48,7 +48,6 @@ body {
     &_box {
         position: relative;
         left: 2%;
-        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
         font-size: 14px;
         width: 19%;
         text-align: center;
@@ -71,11 +70,15 @@ body {
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(3, 1fr);
 
+    
+    
+
 
     &_boxitem {
         position: relative;
         border: 1px solid silver;
         background-size: cover;
+        a{text-decoration: none;}
 
         &:hover {
             cursor: pointer;
