--- a/01-HTML-CSS/09-animations/Fitness App - Roi, Yael, Wil/Roi/style.scss
+++ b/01-HTML-CSS/09-animations/Fitness App - Roi, Yael, Wil/Roi/style.scss
@@ -1,13 +1,43 @@
-body {
-  font-family: "Roboto", sans-serif;
-  background:#d2eaf1;
-}
+.gauge {
+  width: 100%;
+  max-width: 350px;
 
-.circle-wrap {
-  margin: 150px auto;
-  width: 150px;
-  height: 150px;
-  background: #fefcff;
-  border-radius: 50%;
-  border: 1px solid #cdcbd0;
+  &__body {
+    width:100%;
+    height: 350px;
+    //border: 1px solid red;
+    position: relative;
+    border-radius:50%;
+   overflow: hidden;
+
+   &__fill {
+     position:absolute;
+     top:100%;
+     left:0;
+     width:inherit;
+     height: 100%;
+     background: rgb(141, 53, 223);
+     transform-origin: center top;
+     transform: rotate(0.5turn);
+     transition: transform 0.2s ease-out;
+   }
+
+   &__cover1 {
+     width:75%;
+     height:75%;
+     background: white;
+     border-radius: 50%;
+     position:absolute;
+     top:12.5%;
+     left:12.5%;
+   }
+
+   &__cover2 {
+     width:100%;
+     height:40%;
+     position:absolute;
+     top:70%;
+     background: white;
+   }
+  }
 }
