--- a/01-HTML-CSS/09-animations/Andrew/final project/style.scss
+++ b/01-HTML-CSS/09-animations/Andrew/final project/style.scss
@@ -416,6 +416,16 @@ body {
     }
 }
 
+@keyframes spin {
+    0% {
+        transform: rotateZ(0deg);
+    }
+
+    100% {
+        transform: rotateZ(360deg);
+    }
+}
+
 .footer {
     display: flex;
     justify-content: center;
@@ -521,11 +531,9 @@ body {
         width: 600px;
         overflow: hidden;
         white-space: nowrap;
-
-        &:hover {
-            >.wallet-banner__item {
-                animation-play-state: paused;
-            }
+        
+        &:hover>.wallet-banner__item {
+            animation-play-state: paused;
         }
 
         &__item {
@@ -643,6 +651,7 @@ body {
         position: relative;
 
         &__grid {
+            perspective: 1000px;
             position: absolute;
             display: grid;
             width: 600px;
@@ -651,113 +660,145 @@ body {
             grid-template-rows: repeat(5, 1fr);
 
             &__cell {
-                box-shadow: 0px 0px 0px 1px red;
+                width: 120px;
+                height: 120px;
             }
-             #cell1:hover .wallet-value__scene{
-                 
-             }
-             #cell2:hover .wallet-value__scene{
-                 
-             }
-             #cell3:hover .wallet-value__scene{
-                 
-             }
-             #cell4:hover .wallet-value__scene{
-                 
-             }
-             #cell5:hover .wallet-value__scene{
-                 
-             }
-             #cell6:hover .wallet-value__scene{
-                 
-             }
-             #cell7:hover .wallet-value__scene{
-                 
-             }
-             #cell8:hover .wallet-value__scene{
-                 
-             }
-             #cell9:hover .wallet-value__scene{
-                 
-             }
-            #cell10:hover .wallet-value__scene{
-                
+
+            #cell1:hover~.wallet-value__scene {
+                transform: rotateX(20deg) rotateY(-20deg);
             }
-            #cell11:hover .wallet-value__scene{
-                
+
+            #cell2:hover~.wallet-value__scene {
+                transform: rotateX(20deg) rotateY(-10deg);
             }
-            #cell12:hover .wallet-value__scene{
-                
+
+            #cell3:hover~.wallet-value__scene {
+                transform: rotateX(20deg) rotateY(0deg);
             }
-            #cell13:hover .wallet-value__scene{
-                
+
+            #cell4:hover~.wallet-value__scene {
+                transform: rotateX(20deg) rotateY(10deg);
             }
-            #cell14:hover .wallet-value__scene{
-                
+
+            #cell5:hover~.wallet-value__scene {
+                transform: rotateX(20deg) rotateY(20deg);
             }
-            #cell15:hover .wallet-value__scene{
-                
+
+            #cell6:hover~.wallet-value__scene {
+                transform: rotateX(10deg) rotateY(-20deg);
             }
-            #cell16:hover .wallet-value__scene{
-                
+
+            #cell7:hover~.wallet-value__scene {
+                transform: rotateX(10deg) rotateY(-10deg);
             }
-            #cell17:hover .wallet-value__scene{
-                
+
+            #cell8:hover~.wallet-value__scene {
+                transform: rotateX(10deg) rotateY(0deg);
             }
-            #cell18:hover .wallet-value__scene{
-                
+
+            #cell9:hover~.wallet-value__scene {
+                transform: rotateX(10deg) rotateY(10deg);
             }
-            #cell19:hover .wallet-value__scene{
-                
+
+            #cell10:hover~.wallet-value__scene {
+                transform: rotateX(10deg) rotateY(20deg);
             }
-            #cell20:hover .wallet-value__scene{
-                
+
+            #cell11:hover~.wallet-value__scene {
+                transform: rotateX(0deg) rotateY(-20deg);
             }
-            #cell21:hover .wallet-value__scene{
-                
+
+            #cell12:hover~.wallet-value__scene {
+                transform: rotateX(0deg) rotateY(-10deg);
             }
-            #cell22:hover .wallet-value__scene{
-                
+
+            #cell13:hover~.wallet-value__scene {
+                transform: rotateX(0deg) rotateY(0deg);
             }
-            #cell23:hover .wallet-value__scene{
-                
+
+            #cell14:hover~.wallet-value__scene {
+                transform: rotateX(0deg) rotateY(10deg);
             }
-            #cell24:hover .wallet-value__scene{
-                
+
+            #cell15:hover~.wallet-value__scene {
+                transform: rotateX(0deg) rotateY(20deg);
             }
-            #cell25:hover .wallet-value__scene{
-                
+
+            #cell16:hover~.wallet-value__scene {
+                transform: rotateX(-10deg) rotateY(-20deg);
+            }
+
+            #cell17:hover~.wallet-value__scene {
+                transform: rotateX(-10deg) rotateY(-10deg);
+            }
+
+            #cell18:hover~.wallet-value__scene {
+                transform: rotateX(-10deg) rotateY(0deg);
+            }
+
+            #cell19:hover~.wallet-value__scene {
+                transform: rotateX(-10deg) rotateY(10deg);
+            }
+
+            #cell20:hover~.wallet-value__scene {
+                transform: rotateX(-10deg) rotateY(20deg);
+            }
+
+            #cell21:hover~.wallet-value__scene {
+                transform: rotateX(-20deg) rotateY(-20deg);
+            }
+
+            #cell22:hover~.wallet-value__scene {
+                transform: rotateX(-20deg) rotateY(-10deg);
+            }
+
+            #cell23:hover~.wallet-value__scene {
+                transform: rotateX(-20deg) rotateY(0deg);
+            }
+
+            #cell24:hover~.wallet-value__scene {
+                transform: rotateX(-20deg) rotateY(10deg);
+            }
+
+            #cell25:hover~.wallet-value__scene {
+                transform: rotateX(-20deg) rotateY(20deg);
+            }
+        }
+
+
+        &__avrage {
+            position: absolute;
+            top: 0px;
+            left: 0px;
+            word-spacing: 0.7em;
+            span {
+                color: var(--color-lighter-grey);
+            }
+        }
+
+        &__max {
+            z-index: 99;
+            position: absolute;
+            top: 0px;
+            right: 0px;
+            font-weight: 900;
+
+            &::after {
+                position: absolute;
+                content: 'MAX 24H';
+                top: 1.7em;
+                right: 0px;
+                font-weight: 100;
+                color: var(--color-lighter-grey);
             }
         }
 
         &__scene {
-            &__avrage {
-                position: absolute;
-                top: 0px;
-                left: 0px;
-                word-spacing: 0.7em;
-
-                span {
-                    color: var(--color-lighter-grey);
-                }
-            }
-
-            &__max {
-                z-index: -1;
-                position: absolute;
-                top: 0px;
-                right: 0px;
-                font-weight: 900;
-
-                &::after {
-                    position: absolute;
-                    content: 'MAX 24H';
-                    top: 1.7em;
-                    right: 0px;
-                    font-weight: 100;
-                    color: var(--color-lighter-grey);
-                }
-            }
+            z-index: -1;
+            position: absolute;
+            left: 0%;
+            right: 0%;
+            transition: ease 500ms;
 
             &__graph {
                 position: relative;
@@ -771,6 +812,9 @@ body {
                     position: absolute;
                     width: 550px;
                     height: 550px;
+                    animation: spin 30s linear infinite;
+                    //border: 1px solid red;
+                    //border-radius: 50%;
                 }
 
                 h1 {
