--- a/01-HTML-CSS/09-animations/tamir/tamir2.scss
+++ b/01-HTML-CSS/09-animations/tamir/tamir2.scss
@@ -1,40 +1,45 @@
 body {
-    background-color: rgba(128, 128, 128, 0.507);
+    background-color: rgba(173, 179, 170, 0.507);
     margin: 3%;
 }
+
 .wrapper1 {
     &__icon {
         position: absolute;
         top: 35px;
-        :hover{
+
+        :hover {
             cursor: pointer;
         }
     }
+
     h2 {
         position: relative;
         top: 10px;
-        left: 35%;
+        text-align: center;
         font-family: Arial, Helvetica, sans-serif;
     }
 }
+
 .wrapperfirst {
-    
     ul {
         margin: 20px;
         padding: 0%;
         display: flex;
-        justify-content: center;
+        justify-content: space-between;
         align-items: center;
         height: 50px;
         background-color: white;
         border-radius: 0px 30PX 0PX 40PX;
-        :hover{
-            
-            background-color: rgb(163, 162, 162); 
+
+        :hover {
+
+            background-color: rgb(163, 162, 162);
             border-radius: 0px 30PX 0PX 40PX;
-       }
+        }
     }
-    a { 
+
+    a {
         padding: 10px 25px 10px 25px;
         text-align: center;
         border-radius: 40px;
@@ -43,8 +48,10 @@ body {
         color: black;
         font-style: italic;
         font-weight: bold;
-    }   
+
+    }
 }
+
 .wrapper2 {
     display: flex;
     background-color: white;
@@ -53,30 +60,36 @@ body {
     align-items: center;
     padding: 3%;
     margin: 20px;
+
     &__icon2 {
         position: relative;
         top: 1px;
         font-size: 1.5em;
         border-radius: 4px;
     }
-    &__name{ 
-        color: rgb(148, 145, 137);
+
+    &__name {
+        color: orangered;
     }
-    &__button{
+
+    &__button {
         border-radius: 100px 100px 0px;
         position: absolute;
         left: 80%;
         color: white;
         background-color: rgb(0, 0, 0);
     }
-    p {
+
+    &__info {
         font-size: 1.4em;
         position: absolute;
         left: 90px;
         font-style: italic;
         font-weight: bold;
+        margin-left: 10px;
     }
 }
+
 .wrapper3 {
     display: flex;
     background-color: white;
@@ -86,14 +99,15 @@ body {
     padding: 3%;
     margin: 20px;
 
-    p {
+    &__info {
         font-size: 1.4em;
         position: absolute;
         left: 90px;
         font-style: italic;
         font-weight: bold;
     }
-    button {
+
+    &__button {
         position: absolute;
         left: 80%;
         color: white;
@@ -101,87 +115,214 @@ body {
         background-color: black;
     }
 }
+
 .wrapper4 {
     display: flex;
-    gap: 20px;
-    p {
+
+
+
+    &__info {
         font-size: 1.4em;
-        left: 90px;
         font-style: italic;
         font-weight: bold;
+
     }
-    &__bottun{
-        position: absolute;
-        align-items: center;
-        left: 80px;
-        top:4%;
+
+    &__bottun {
+        position: relative;
+        margin-top: 15px;
         color: white;
         height: 30px;
         border-radius: 100px 100px 0px;
         background-color: hsl(0, 0%, 0%);
     }
 }
+
 .card {
-    
+
     border-radius: 40px;
     background-color: white;
+
     img {
-        height: 235px;
-        border-radius: 40px;  
+        height: 100%;
+        width: 100%;
+        border-radius: 40px;
     }
+
     &__info {
-    padding-left: 20px;  
+        padding-left: 20px;
     }
+
     &__des {
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     }
+
     &__subinfo {
         display: flex;
         gap: 30px;
     }
+
     &__price {
-        font-style:italic;
-      position: relative;
-      left: 20px;
-      i{
-          color: rgb(255, 102, 0);
-      }
+        font-style: italic;
+        position: relative;
+        left: 20px;
+
+        i {
+            color: rgb(255, 0, 13);
+        }
     }
-    &__loc{
-        font-style:italic;
+
+    &__loc {
+        font-style: italic;
         position: relative;
         left: 145px;
     }
 }
+
 .card2 {
     margin-top: 15px;
     border-radius: 40px;
     background-color: white;
+
     img {
-        height: 235px;
-        border-radius: 40px;  
+        height: 100%;
+        width: 100%;
+        border-radius: 40px;
     }
+
     &__info {
-    padding-left: 20px;  
+        padding-left: 20px;
     }
+
     &__des {
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     }
-    &__subinfo {   
+
+    &__subinfo {
         display: flex;
         gap: 30px;
     }
+
     &__price {
-        font-style:italic;
-      position: relative;
-      left: 20px;
-      i{
-          color: rgb(30, 255, 0);
-      }
+        font-style: italic;
+        position: relative;
+
+        left: 20px;
+
+        i {
+            color: rgb(0, 255, 0);
+        }
     }
-    &__loc{
-        font-style:italic;
+
+    &__loc {
+        font-style: italic;
         position: relative;
         left: 145px;
+    }
+}
+
+@media only screen and(min-width: 671px) {
+
+    .wrapperfirst {
+        ul {
+            justify-content: space-between;
+            height: 80px;
+            background-color: white;
+            border-radius: 0px 30PX 0PX 40PX;
+        }
+
+        a {
+            padding: 10px 50px 10px 50px;
+            font-size: 2.5em;
+        }
+    }
+
+    .wrapper2 {
+        &__icon2 {
+            font-size: 2em;
+        }
+
+        &__name {
+            color: orangered;
+        }
+
+        &__button {
+            position: absolute;
+            left: 85%;
+            background-color: rgb(0, 0, 0);
+        }
+
+        &__info {
+            font-size: 2.5em;
+            left: 120px;
+        }
+    }
+
+    .wrapper3 {
+        height: 40px;
+
+        &__info {
+            font-size: 2.5em;
+            position: absolute;
+            left: 120px;
+        }
+
+        &__button {
+            left: 85%;
+        }
+    }
+
+    .wrapper4 {
+        display: flex;
+        gap: 20px;
+
+        &__info {
+            font-size: 2.5em;
+            font-style: italic;
+            font-weight: bold;
+        }
+
+        &__bottun {
+            margin-top: 47px;
+        }
+    }
+
+    .card {
+
+        border-radius: 40px;
+        background-color: white;
+
+        img {
+            align-items: center;
+            background-size: auto;
+        }
+
+        &__info {
+            padding-left: 20px;
+        }
+
+        &__des {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        }
+
+        &__subinfo {
+            display: flex;
+            gap: 30px;
+        }
+
+        &__price {
+            font-style: italic;
+            position: relative;
+            left: 20px;
+
+
+
+        }
+
+        &__loc {
+            font-style: italic;
+            position: relative;
+            left: 145px;
+        }
     }
 }
