--- a/01-HTML-CSS/09-animations/group7_Shay_Jhon_Omri/shay/style.scss
+++ b/01-HTML-CSS/09-animations/group7_Shay_Jhon_Omri/shay/style.scss
@@ -7,97 +7,122 @@
        .main{
        justify-content: center;
        margin: auto;
-       }
-    }
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 0.6fr 3fr 0.6fr;
+        
         .header{
             margin: auto;
             display: grid;
-            grid-template-columns: repeat(3, 1fr);
+            grid-template-columns:49fr 2fr;
             grid-template-rows: 1fr;
-            max-width: 800px;
+            //max-width: 800px;
+            &__icon{
             .fa-search{
                 color: #25404e;
-                grid-column: 1;
-                grid-row: 1;
+                grid-column: 2;
+                display: grid;
+                grid-template-rows: 1fr;
+                grid-template-columns: 0.2fr 0.8fr;
+                  span{
+            
+                grid-column: 2;
+                color: #25404e;
+                font-size: 18px;
+                font-family: 'Roboto', sans-serif;
+            }
             }
             .fa-pen{
                 
-                grid-column: 16;
+                grid-column: 10;
                 color: #25404e;
                 grid-row: 1;
             }
    
         
      
-            p{
-                grid-row: 1;
-                grid-column: 2;
-                color: #25404e;
-                font-size: 18px;
-            }
+          
           
         }
+    }
           .contain{
               margin: auto;
               align-items: center;
       display: grid;
-      grid-template-columns: repeat(2,400px);
-    grid-template-rows: repeat(3, 1fr);
+      grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
       gap: 5px;
       //padding-left: 80px;
-          max-width: 800px;
-            max-height: 1200px;
+      border: 2px solid gold;
+           
           &__box{
  
                 background-color: #152c39;
                 border-radius: 20px;
                 width:400px;
                 height:400px;
-                display: grid;
-                grid-row: 1;
-                grid-column: 1;
-                grid-template-columns: repeat(3, 63px);
-                grid-template-rows: repeat(2,100px);
                 gap: 10px;
-                &--text{
-                    padding-top: 5px;
+               
+                &__up{   
                     grid-row: 1;
-                    grid-column: 2;
+                    grid-column: 1;
                     display: grid;
-                    grid-template-rows: repeat(14, 20px);
-                    grid-template-columns: repeat(8, 20px);
-                    h2{
+                    gap: 1px;
+                    grid-template-rows: 0.1fr 0.1fr;
+                    grid-template-columns: 0.5fr 3fr 3fr;
+                   &--text{
+                          
                         grid-row: 1;
-                        grid-column: 2;
+                        grid-column: 2;    
+                    h2{
+                 
                         color: white;
                     }
-                    .city{
-                        grid-row: 3;
-                        grid-column: 1;
+                }
+                    &--city{
+                        // margin-top: auto;
+                       grid-row: 1;
+                        display: grid;
+                        grid-template-columns: 1fr;
+                        grid-template-rows: 0.6fr 1fr;
+                        width: 88px;
+                        h6{
                         color: white;
                         font-size: 20px;
-                        width: 100px;
-                    }
-                   p{
-                        grid-row: 5;
+                        }
+                        grid-row: 2;
                         grid-column: 2;
+                       
+                    p{ grid-row: 2;
+                        grid-column: 1; 
+                       
                         font-size: 20px;
                         color: #3d5564;
                     }
+                }
                     i{
-                        grid-column: 4;
+                        grid-column: 4;    
+                        span{
+                            
+                        grid-row: 3;
+                        grid-column: 2;
+                        font-size: 20px;
+                        color: #3d5564;
+                        font-family: 'Roboto', sans-serif;
+                    }
                     }
                 
             
-                 
+                 &--bigIcon{
+                     margin-right: auto;
+                     grid-column: 3;
+                     grid-row: 2;
                 .fa-gradient{
-                   grid-column: 10!important;
+                  
                   background: -webkit-gradient(linear, left top, left bottom, from(#5f95fc), to(#cc63f9));
                   -webkit-background-clip: text;
                   -webkit-text-fill-color: transparent;
                   display: initial;
-                  grid-column: 5;
-                  grid-row: 2;
                 }
                 .fa-gradients{
                     background: -webkit-gradient(linear, left top, left bottom, from(#5f95fc), to(#cc63f9));
@@ -108,8 +133,7 @@
                     animation-duration: 2s;
                     animation-delay: 2s;
                     animation-iteration-count: 5;
-                    width: 70px;
-                    height: 70px;
+                   
                 }
                 .fa-snow{
                     animation-name: snowflakes;
@@ -268,7 +292,7 @@
                 }
             }
                 .fa-cloud-sun{
-                    grid-column: 5;
+                    grid-column: 6;
                     grid-row: 2;
                     width: 100px; height: 100px;
                 }
@@ -292,6 +316,8 @@
                         transform: scale(0.7);
                     }
                 }
+             }
+            }
                     .fa-tint{
                         grid-row: 12;
                         grid-column: 2/3;
@@ -341,7 +367,7 @@
                         }
                     }
                 
-                }
+                
             }
     }
 .bar{
@@ -357,7 +383,9 @@
     color: #7b446a;
 }
 }
-}
+} 
+ }
+    }
 .details {
     background: rgba(19, 27, 36, 0.877);
     max-width: 600px;
@@ -560,21 +588,26 @@
         .header{
             
             display: grid;
-            grid-template-columns: 5fr 1fr;
+            grid-template-columns: 19fr 2fr;
            grid-template-rows: 1fr;
           &__icon{
              
-
+   
             .fa-search{
                 color: #25404e;
                 grid-column: 1;
-                display: grid;
-                
+              display: grid;
+                grid-template-columns: 0.2fr 0.8fr;
+                grid-template-rows: 1fr;
+              
                    span{
-                
-                grid-column: 3;
+                       margin-top: auto;
+                       grid-row: 1;
+                    font-family: 'Roboto', sans-serif;
+                grid-column: 2;
                 color: #25404e;
                 font-size: 18px;
+
             }
             }
             .fa-pen{
